# QuantumSpark

./: CMakeLists.txt  generateProjectFiles.bat
engine/: core.cpp  core.h  debug.cpp  debug.h  entity.cpp  entity.h  managed.h  utilities.h
engine/components/: component.cpp  component.h
engine/graphics/: renderer.cpp  renderer.h
engine/math/: math.h  vector.h  vector3.h
game/: main.cpp
